--- a/src/vista/FrmFactura.form
+++ b/src/vista/FrmFactura.form
@@ -60,10 +60,6 @@
                                       <Group type="103" groupAlignment="1" max="-2" attributes="0">
                                           <Component id="txtFecha" pref="230" max="32767" attributes="0"/>
                                           <Component id="txtDetalle" max="32767" attributes="0"/>
-                                          <Group type="102" alignment="1" attributes="0">
-                                              <Component id="txtFormadePago" min="-2" pref="160" max="-2" attributes="0"/>
-                                              <EmptySpace min="-2" pref="33" max="-2" attributes="0"/>
-                                          </Group>
                                       </Group>
                                       <EmptySpace min="-2" pref="95" max="-2" attributes="0"/>
                                   </Group>
@@ -71,6 +67,7 @@
                                       <Group type="103" groupAlignment="0" attributes="0">
                                           <Component id="txtCantidad" min="-2" pref="230" max="-2" attributes="0"/>
                                           <Component id="txtId" min="-2" pref="91" max="-2" attributes="0"/>
+                                          <Component id="cbxFormaPago" alignment="0" min="-2" pref="230" max="-2" attributes="0"/>
                                       </Group>
                                       <EmptySpace max="-2" attributes="0"/>
                                   </Group>
@@ -146,7 +143,7 @@
               <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="lblNombre3" alignment="3" min="-2" pref="23" max="-2" attributes="0"/>
-                  <Component id="txtFormadePago" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="cbxFormaPago" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="51" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
@@ -235,14 +232,6 @@
     <Component class="javax.swing.JTextField" name="txtCantidad">
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtCantidadActionPerformed"/>
-      </Events>
-      <AuxValues>
-        <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
-      </AuxValues>
-    </Component>
-    <Component class="javax.swing.JTextField" name="txtFormadePago">
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtFormadePagoActionPerformed"/>
       </Events>
       <AuxValues>
         <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
@@ -419,6 +408,21 @@
         <Property name="enabled" type="boolean" value="false"/>
       </Properties>
       <AuxValues>
+        <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
+      </AuxValues>
+    </Component>
+    <Component class="javax.swing.JComboBox" name="cbxFormaPago">
+      <Properties>
+        <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+          <StringArray count="3">
+            <StringItem index="0" value="Efectivo"/>
+            <StringItem index="1" value="Tajeta Debito"/>
+            <StringItem index="2" value="Tarjeta Credito"/>
+          </StringArray>
+        </Property>
+      </Properties>
+      <AuxValues>
+        <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
         <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
       </AuxValues>
     </Component>
